// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenshiftView Component should display an alternate graph on query-string update: alternate graph 1`] = `
<PageLayout>
  <PageHeader
    t={[Function]}
    viewId="OpenShift"
  >
    t(curiosity-view.OpenShiftTitle, Subscription Watch)
  </PageHeader>
  <PageToolbar>
    <Toolbar
      graphQuery={
        Object {
          "granularity": "daily",
        }
      }
      isDisabled={false}
      t={[Function]}
      viewId="OpenShift"
    />
  </PageToolbar>
  <PageSection>
    <Connect(C3GraphCard)
      cardTitle="t(curiosity-graph.cardHeading)"
      filterGraphData={
        Array [
          Object {
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "cores",
            "stroke": "#06c",
          },
          Object {
            "id": "thresholdCores",
          },
        ]
      }
      graphQuery={
        Object {
          "granularity": "daily",
        }
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      productShortLabel="OpenShift"
      viewId="OpenShift"
    >
      <Select
        ariaLabel="Select option"
        className=""
        id="generatedid-"
        isDisabled={false}
        name={null}
        onSelect={[Function]}
        options={
          Array [
            Object {
              "title": "Cores",
              "value": "cores",
            },
            Object {
              "title": "Sockets",
              "value": "sockets",
            },
          ]
        }
        placeholder="Select option"
        selectedOptions="cores"
        variant="single"
      />
    </Connect(C3GraphCard)>
  </PageSection>
</PageLayout>
`;

exports[`OpenshiftView Component should have a fallback title: title 1`] = `
<PageLayout>
  <PageHeader
    t={[Function]}
    viewId="OpenShift"
  >
    t(curiosity-view.OpenShiftTitle, Subscription Watch)
  </PageHeader>
  <PageToolbar>
    <Toolbar
      graphQuery={
        Object {
          "granularity": "daily",
        }
      }
      isDisabled={false}
      t={[Function]}
      viewId="OpenShift"
    />
  </PageToolbar>
  <PageSection>
    <Connect(GraphCard)
      cardTitle="t(curiosity-graph.cardHeading)"
      filterGraphData={
        Array [
          Object {
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "cores",
            "stroke": "#06c",
          },
          Object {
            "id": "thresholdCores",
          },
        ]
      }
      graphQuery={
        Object {
          "granularity": "daily",
        }
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      productShortLabel="OpenShift"
      viewId="OpenShift"
    >
      <Select
        ariaLabel="Select option"
        className=""
        id="generatedid-"
        isDisabled={false}
        name={null}
        onSelect={[Function]}
        options={
          Array [
            Object {
              "title": "Cores",
              "value": "cores",
            },
            Object {
              "title": "Sockets",
              "value": "sockets",
            },
          ]
        }
        placeholder="Select option"
        selectedOptions="cores"
        variant="single"
      />
    </Connect(GraphCard)>
  </PageSection>
</PageLayout>
`;

exports[`OpenshiftView Component should render a non-connected component: non-connected 1`] = `
<PageLayout>
  <PageHeader
    t={[Function]}
    viewId="OpenShift"
  >
    t(curiosity-view.OpenShiftTitle, Subscription Watch)
  </PageHeader>
  <PageToolbar>
    <Toolbar
      graphQuery={
        Object {
          "granularity": "daily",
        }
      }
      isDisabled={false}
      t={[Function]}
      viewId="OpenShift"
    />
  </PageToolbar>
  <PageSection>
    <Connect(GraphCard)
      cardTitle="t(curiosity-graph.cardHeading)"
      filterGraphData={
        Array [
          Object {
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "cores",
            "stroke": "#06c",
          },
          Object {
            "id": "thresholdCores",
          },
        ]
      }
      graphQuery={
        Object {
          "granularity": "daily",
        }
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      productShortLabel="OpenShift"
      viewId="OpenShift"
    >
      <Select
        ariaLabel="Select option"
        className=""
        id="generatedid-"
        isDisabled={false}
        name={null}
        onSelect={[Function]}
        options={
          Array [
            Object {
              "title": "Cores",
              "value": "cores",
            },
            Object {
              "title": "Sockets",
              "value": "sockets",
            },
          ]
        }
        placeholder="Select option"
        selectedOptions="cores"
        variant="single"
      />
    </Connect(GraphCard)>
  </PageSection>
</PageLayout>
`;
